<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about">关于</string>
    <string name="account">账号</string>
    <string name="action_register">访问pixiv注册账号</string>
    <string name="action_sign_in">登录</string>
    <string name="add_collection">收藏</string>
    <string name="app_name">PivisionM</string>
    <string name="app_ranking">评分</string>
    <string name="app_update_log">"1. 解锁了网络访问
2. 去掉了功能不正常的pixivision
3. 更新了OAuth接口，可以正常登陆了
4. 适配了分屏功能
5. 适配了全面屏比例
6. 简介、评论可以选择和复制，并且可以打开链接
7. 默认保存文件夹修改为/Pictures/PivisionM
8. 修正退出后切换网络会无法载入的问题
9. 使用了新的服务器连接手段，参考自「Notsfsssf/Pix-EzViewer」
10. 优化相同页面多次打开的问题

原作者：Reiya
修改者：某亚瑟
如需反馈可以发邮件至「i@4cy.me」
或者到我的博客「4cy.me」留言"</string>
    <string name="auto_create_subfolder">自动建立子文件夹</string>
    <string name="blacklist_summary">以换行分隔，适用于排行榜和搜索</string>
    <string name="blacklist_title">屏蔽标签</string>
    <string name="bookmark_tag">收藏标签</string>
    <string name="cache_size_limit">图片缓存上限（MB）</string>
    <string name="cannot_be_null">不能为空</string>
    <string name="clear_history">清除浏览历史</string>
    <string name="clear_pic_cache">清理图片缓存</string>
    <string name="cleared">已清理</string>
    <string name="click_to_login">点击登录</string>
    <string name="clip_info_id">id已复制到剪贴板</string>
    <string name="collect_successfully">收藏成功</string>
    <string name="collection">收藏</string>
    <string name="concern">关注</string>
    <string name="concern_successfully">关注成功</string>
    <string name="daily">本日</string>
    <string name="detail">详情</string>
    <string name="download_all_author_hint">是否保存该画师的所有作品（可能耗时较长）？ 请确认保存路径和存储空间剩余大小。</string>
    <string name="download_all_bookmark_hint">是否保存所有收藏作品（可能耗时较长）？ 请确认保存路径和存储空间剩余大小。</string>
    <string name="download_queue">下载队列</string>
    <string name="error_field_required">不能为空</string>
    <string name="fail_to_collect">收藏失败</string>
    <string name="fail_to_concern">关注失败</string>
    <string name="fail_to_load">很抱歉， 加载失败</string>
    <string name="fail_to_login_account_err">登录失败</string>
    <string name="fail_to_login_network_err">登录失败</string>
    <string name="fail_to_remove_collection">解除收藏失败</string>
    <string name="fail_to_remove_concern">解除关注失败</string>
    <string name="female">女性</string>
    <string name="file_already_exists">该文件已存在</string>
    <string name="filter">过滤</string>
    <string name="hint_search">标签／作品id／画师id</string>
    <string name="history">浏览历史</string>
    <string name="history_ranking">历史排行</string>
    <string name="invalid_object">无效的对象</string>
    <string name="list_columns_count">列表列数</string>
    <string name="list_style">列表形式</string>
    <string name="login_successfully">登录成功</string>
    <string name="male">男性</string>
    <string name="mobile_network_now">当前网络为移动网络</string>
    <string name="monthly">本月</string>
    <string name="more">更多</string>
    <string name="negative">取消</string>
    <string name="no_network_now">当前无网络</string>
    <string name="no_result_found">很遗憾,没有找到相关结果</string>
    <string name="onLogin">登录</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="open_source">开源</string>
    <string name="password">密码</string>
    <string name="path_to_save_pic">图片保存位置</string>
    <string name="personal_info">个人资料</string>
    <string name="pic_cache">图片缓存</string>
    <string name="pic_saving">图片保存</string>
    <string name="pixiv_login">pixiv账号登录</string>
    <string name="please_input_keyword">请输入关键词</string>
    <string name="please_login_first">请先登录</string>
    <string name="please_wait">请稍等</string>
    <string name="positive">确定</string>
    <string name="pri">私人</string>
    <string name="processing_login">登录中</string>
    <string name="prompt_account">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="pub">公开</string>
    <string name="ranking">排行榜</string>
    <string name="recommend">推荐</string>
    <string name="related_works">相关作品</string>
    <string name="remove_collection">解除收藏</string>
    <string name="remove_concern">解除关注</string>
    <string name="removed_collection">已解除收藏</string>
    <string name="removed_concern">已解除关注</string>
    <string name="retry">重试</string>
    <string name="save_all_works">保存所有作品</string>
    <string name="save_pic">保存图片</string>
    <string name="save_to">保存到</string>
    <string name="saving_file_name">保存文件名</string>
    <string name="saving_path">保存位置</string>
    <string name="saving_please_wait">保存中,请稍等</string>
    <string name="search">搜索</string>
    <string name="select_all">全选</string>
    <string name="settings">设置</string>
    <string name="show_comments">查看评论</string>
    <string name="subscription">订阅</string>
    <string name="tag">标签</string>
    <string name="theme_color">主题颜色</string>
    <string name="title_activity_login">登录</string>
    <string name="toast_long_click_private">长按私人，很重要所以只说一遍哟</string>
    <string name="too_many_tags">标签数量超过上限</string>
    <string name="upper_level">上一级</string>
    <string name="user_interface">界面</string>
    <string name="weekly">本周</string>
    <string name="works">作品</string>
    <string name="add_tag">Add Tag</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clip_info_donate">"
「支付宝」账号已复制到剪贴板

原作者支付宝账号「reiya.zyr@gmail.com」
如果喜欢软件请捐助给Ta"</string>
    <string name="default_web_client_id">65695658003-f7aiib40pb9gqlpecf8kgjtv2roa4qia.apps.googleusercontent.com</string>
    <string name="define_roundedimageview" />
    <string name="donate">捐助</string>
    <string name="firebase_database_url">https://pixiv-cbff6.firebaseio.com</string>
    <string name="gcm_defaultSenderId">65695658003</string>
    <string name="google_api_key">AIzaSyAqPinzJfSRkQRYTj16oeONKEoecUeP5Gg</string>
    <string name="google_app_id">1:65695658003:android:c39f20f7fe8f74d2</string>
    <string name="google_crash_reporting_api_key">AIzaSyAqPinzJfSRkQRYTj16oeONKEoecUeP5Gg</string>
    <string name="google_storage_bucket">pixiv-cbff6.appspot.com</string>
    <string name="key_account">account</string>
    <string name="key_auto_create_subfolder">auto_create_subfolder</string>
    <string name="key_auto_login">auto_login</string>
    <string name="key_blacklist">blacklist</string>
    <string name="key_cache_limit">cache_limit</string>
    <string name="key_columns_count">key_columns_count</string>
    <string name="key_current_cache_size">current_cache_size</string>
    <string name="key_favorite_user_option">favorite_user_option</string>
    <string name="key_favorite_work_option">favorite_work_option</string>
    <string name="key_file_name_mode">file_name_mode</string>
    <string name="key_list_style">key_list_style_v2</string>
    <string name="key_password">password</string>
    <string name="key_path">saving_path</string>
    <string name="key_show_about_dialog_time">show_about_dialog_time</string>
    <string name="key_show_toast_long_click_favorite">key_show_toast_long_click_favorite</string>
    <string name="key_show_toast_long_click_follow">key_show_toast_long_click_follow</string>
    <string name="key_splash_screen_showed_times">key_splash_screen_showed_times</string>
    <string name="key_splash_screen_url">key_splash_screen_url</string>
    <string name="key_theme_color">theme_color</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
</resources>