<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:icon="@drawable/ic_star_colored_24px" android:id="@id/collection" android:title="@string/collection" />
        <item android:icon="@drawable/ic_person_colored_24px" android:id="@id/concern" android:title="@string/concern" />
        <item android:icon="@drawable/ic_history_colored_24px" android:id="@id/history" android:title="@string/history" />
        <item android:icon="@drawable/ic_file_download_colored_24px" android:id="@id/download" android:title="@string/download_queue" />
        <!-- <item android:icon="@drawable/pixiv_p" android:id="@id/spotlight" android:title="@string/pixivision" /> -->
    </group>
    <group>
        <item android:icon="@drawable/ic_settings_colored_24px" android:id="@id/settings" android:title="@string/settings" />
        <item android:icon="@drawable/ic_info_colored_24px" android:id="@id/about" android:title="@string/about" />
    </group>
</menu>